--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "deploy-dev": "sls deploy -s dev"
+    "deploy-dev": "sls deploy -s dev",
+    "test-dev": "cross-env TEST_ENV=development mocha tests/**/*.js --timeout 30000"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,14 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.6",
+    "faker": "^5.5.3",
+    "node-uuid": "^1.4.8",
     "serverless-http": "^2.7.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "cross-env": "^7.0.3",
+    "mocha": "^9.1.2",
+    "supertest": "^6.1.6"
   }
 }
